--- a/Developer/InfoAlumnos/InfoAlumnos/InfoAlumnos.csproj
+++ b/Developer/InfoAlumnos/InfoAlumnos/InfoAlumnos.csproj
@@ -69,6 +69,12 @@
     <Compile Include="IngresoAlumno.Designer.cs">
       <DependentUpon>IngresoAlumno.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenúAlumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenúAlumno.Designer.cs">
+      <DependentUpon>MenúAlumno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistroAlum.cs">
@@ -86,6 +92,9 @@
     <EmbeddedResource Include="IngresoAlumno.resx">
       <DependentUpon>IngresoAlumno.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MenúAlumno.resx">
+      <DependentUpon>MenúAlumno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -94,6 +103,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="RegistroAlum.resx">
       <DependentUpon>RegistroAlum.cs</DependentUpon>
@@ -110,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2020-11-17 at 8.01.00 PM.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
